<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activities.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePictureIV"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_margin="14dp"
        android:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/profileSurnameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:fontFamily="@font/nunito_black"
        android:text="@string/surname"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileOtherNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="21dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/other_name"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profileLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/location"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/profileSubLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:fontFamily="@font/nunito"
            android:text="@string/secondary_location"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/profileEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/nunito"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/profilePhoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="21dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profileSave"
        android:layout_width="117dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/bg_solid_light"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />
</LinearLayout>