<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/baseNavigationEditProfile"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end|top"
        android:src="@drawable/ic_edit"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/baseNavigationProfilePicture"
        android:layout_width="63dp"
        android:layout_height="63dp"
        app:civ_border_width="0dp"
        android:contentDescription="@string/profile_picture"
        android:paddingTop="7dp"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/baseNavigationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:paddingTop="7dp"
        android:text="@string/cupcake_r"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/baseNavigationMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/author_email"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>
